--- a/admin.html
+++ b/admin.html
@@ -306,6 +306,21 @@
                 <div id="previewArea" class="lyrics-container"></div>
             </div>
         </div>
+        <div class="card" style="margin-top: 30px;">
+            <h2><i class="fas fa-users-cog"></i> Gestión de Roles</h2>
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
+                <div class="form-group"><label>Fecha</label><input type="date" id="rolFecha"></div>
+                <div class="form-group"><label>Director</label><input type="text" id="rolDirector"></div>
+                <div class="form-group"><label>Piano</label><input type="text" id="rolPiano"></div>
+                <div class="form-group"><label>Guitarra</label><input type="text" id="rolGuitarra"></div>
+                <div class="form-group"><label>Batería</label><input type="text" id="rolBateria"></div>
+                <div class="form-group"><label>Bajo</label><input type="text" id="rolBajo"></div>
+                <div class="form-group" style="grid-column: span 2;"><label>Coros (Separados por coma)</label><input type="text" id="rolCoros"></div>
+            </div>
+            <button class="btn btn-primary" style="width: 100%; margin-top: 15px;" onclick="guardarRol()">
+                <i class="fas fa-calendar-check"></i> Publicar Rol
+            </button>
+        </div>
     </div>
 
     <script src="app.js"></script>
