--- a/admin.html
+++ b/admin.html
@@ -207,7 +207,21 @@
                 <div class="form-group"><input type="text" id="artista" placeholder="Artista / Autor"></div>
                 
                 <div class="form-group" style="display:flex; gap:10px;">
-                    <select id="tono" style="flex:1;"><option value="" disabled selected>Tono</option><option value="C">C</option><option value="D">D</option><option value="E">E</option><option value="F">F</option><option value="G">G</option><option value="A">A</option><option value="B">B</option></select>
+                    <select id="tono" style="flex:1;">
+                        <option value="" disabled selected>Tono</option>
+                        <option value="C">C</option>
+                        <option value="C#">C# / Db</option>
+                        <option value="D">D</option>
+                        <option value="D#">D# / Eb</option>
+                        <option value="E">E</option>
+                        <option value="F">F</option>
+                        <option value="F#">F# / Gb</option>
+                        <option value="G">G</option>
+                        <option value="G#">G# / Ab</option>
+                        <option value="A">A</option>
+                        <option value="A#">A# / Bb</option>
+                        <option value="B">B</option>
+                    </select>
                     <input type="number" id="bpm" placeholder="BPM" style="flex:1;">
                     <select id="compas" style="flex:1;"><option value="4/4">4/4</option><option value="6/8">6/8</option></select>
                 </div>
